# MergePilot

./: .gitignore  .merkle-snapshot.json  .oxfmtrc.json  .prettierignore  AGENTS.md  CODE_STANDARDS.md  FRONTEND_STANDARDS.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/checks/: frontend-standards.mjs  release-smoke.mjs  updater-config.mjs  updater-metadata.mjs  version-consistency.mjs
.github/checks/__tests__/: release-smoke.spec.ts  updater-config.spec.ts  updater-metadata.spec.ts  version-consistency.spec.ts
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
openspec/: config.yaml
openspec/changes/move-settings-to-menu/: design.md  proposal.md  tasks.md
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  mergepilot.entitlements  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  error_log.rs  file_content.rs  http_client.rs  lib.rs  local_store.rs  main.rs  models.rs  patch.rs  state.rs  vault.rs
src-tauri/src/ai/: client.rs  config.rs  mod.rs  prompt.rs
src-tauri/src/commands/: ai.rs  auth.rs  error_log.rs  inbox.rs  issue.rs  mod.rs  pr.rs  review.rs  support.rs  update.rs
src-tauri/src/platform/: gitee.rs  github.rs  gitlab.rs  mod.rs
src-tauri/tests/: gitee_adapter_test.rs  github_adapter_test.rs  gitlab_adapter_test.rs
src/__tests__/: App.spec.ts
src/api/: errors.ts  index.ts
src/api/__tests__/: errors.spec.ts
src/components/ai/: AiReviewPanel.vue  AiSettings.vue  AiSuggestionCard.vue
src/components/command/: CommandPalette.vue
src/components/diff/: DiffFile.vue  DiffLine.vue  DiffViewer.vue
src/components/inbox/: ReviewInboxCard.vue
src/components/issue/: IssueCard.vue  IssueForm.vue
src/components/layout/: AppLayout.vue  Sidebar.vue
src/composables/: useSelectDropdown.ts
src/pages/: IssueListPage.vue  IssueNewPage.vue  LoginPage.vue  PrDetailPage.vue  PrListPage.vue  PrNewPage.vue  ReviewInboxPage.vue  SettingsPage.vue
src/router/: __tests__.spec.ts  index.ts
src/services/: aiReviewPersistence.ts
src/stores/: useAuthStore.ts  usePrStore.ts  useRepoStore.ts  useReviewDraftStore.ts  useReviewInboxStore.ts  useUiSettingsStore.ts  useUpdateStore.ts
src/types/: index.ts
src/utils/: aiReviewDraft.ts  error.ts  prCreateWarnings.ts
(+46 files in other folders)
