[package]
name = "mergepilot"
version = "0.1.0"
edition = "2021"
description = "Cross-platform Code Merge Tool"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
thiserror = "2"
directories = "6"
futures = "0.3"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
wiremock = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "mergepilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[test]]
name = "github_adapter"
path = "tests/github_adapter_test.rs"

[[test]]
name = "gitee_adapter"
path = "tests/gitee_adapter_test.rs"
