[package]
name = "mergebeacon"
default-run = "mergebeacon"
version = "0.6.0"
edition = "2021"
description = "Cross-platform PR review and issue management desktop client"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
thiserror = "2"
directories = "6"
futures = "0.3"
aes-gcm = "0.10"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
base64 = "0.22"
minisign-verify = "0.2.5"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
eventsource-stream = "0.2"
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "mergebeacon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[test]]
name = "github_adapter"
path = "tests/github_adapter_test.rs"

[[test]]
name = "gitee_adapter"
path = "tests/gitee_adapter_test.rs"

[[test]]
name = "gitlab_adapter"
path = "tests/gitlab_adapter_test.rs"
